--- a/.github/workflows/_scratchpad.yml
+++ b/.github/workflows/_scratchpad.yml
@@ -195,27 +195,57 @@ jobs:
       matrix-itch: ${{ steps.set-matrix.outputs.matrix_itch }}
       matrix-void: ${{ steps.set-matrix.outputs.void }}
     steps:
+      - name: Set up Python 3.11
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
+      - name: Install dependencies
+        shell: bash
+        run:
+          pip install -e tools/ci
       - name: Convert global APPS_ARRAY to matrix
         id: set-matrix
         run: |
-          echo matrix=$(jq '[.[]]' <<< ${APPS_ARRAY}) >> $GITHUB_OUTPUT
-          echo matrix_itch=$(jq '[.[] | select(.itch == true)]' <<< ${APPS_ARRAY}) >> $GITHUB_OUTPUT
-          echo matrix_pypi=$(jq '[.[] | select(.pypi == true)]' <<< ${APPS_ARRAY}) >> $GITHUB_OUTPUT
+          echo "matrix<<EOF" >> $GITHUB_OUTPUT
+            release-helper \
+              --config .release-please-config.json \
+              --manifest .release-please-manifest.json \
+              matrix all <<< ${RP_PR} >> $GITHUB_OUTPUT
+          echo "EOF" >> $GITHUB_OUTPUT
+
+          echo "matrix_itch<<EOF" >> $GITHUB_OUTPUT
+            release-helper \
+              --config .release-please-config.json \
+              --manifest .release-please-manifest.json \
+              matrix itch <<< ${RP_PR} >> $GITHUB_OUTPUT
+          echo "EOF" >> $GITHUB_OUTPUT
+
+          echo "matrix_pypi<<EOF" >> $GITHUB_OUTPUT
+            release-helper \
+              --config .release-please-config.json \
+              --manifest .release-please-manifest.json \
+              matrix pypi <<< ${RP_PR} >> $GITHUB_OUTPUT
+          echo "EOF" >> $GITHUB_OUTPUT
+          # echo matrix=$(jq '[.[]]' <<< ${APPS_ARRAY}) >> $GITHUB_OUTPUT
+          # echo matrix_itch=$(jq '[.[] | select(.itch == true)]' <<< ${APPS_ARRAY}) >> $GITHUB_OUTPUT
+          # echo matrix_pypi=$(jq '[.[] | select(.pypi == true)]' <<< ${APPS_ARRAY}) >> $GITHUB_OUTPUT
           echo matrix_void='[]' >> $GITHUB_OUTPUT
 
   build:
+    if:  ${{ fromJson(needs.generate-matrix.outputs.matrix['has_matrix']) }}
     name: Build ${{ matrix.name }}
     needs: generate-matrix
     runs-on: self-hosted
     strategy:
       matrix:
-        include: ${{ fromJson(needs.generate-matrix.outputs.matrix) }}
+        include: ${{ fromJson(needs.generate-matrix.outputs.matrix['matrix']) }}
     steps:
       - name: Build ${{ matrix.name }}
         run: |
           echo "Building ${{ matrix.name }} at path: ${{ matrix.path }}"
 
   publish-pypi:
+    if:  ${{ fromJson(needs.generate-matrix.outputs.matrix-pypi['has_matrix']) }}
     name: Publish pypi ${{ matrix.name }}
     needs: generate-matrix
     runs-on: self-hosted
@@ -228,6 +258,7 @@ jobs:
           echo "Building ${{ matrix.name }} at path: ${{ matrix.path }}"
 
   publish-itch:
+    if:  ${{ fromJson(needs.generate-matrix.outputs.matrix-itch['has_matrix']) }}
     name: Publish Itch ${{ matrix.name }}
     needs: generate-matrix
     runs-on: self-hosted
@@ -240,6 +271,7 @@ jobs:
           echo "Building ${{ matrix.name }} at path: ${{ matrix.path }}"
 
   publish-void:
+    if: ${{ fromJson(needs.generate-matrix.outputs.matrix-void) != '[]' }}
     name: Publish Void ${{ matrix.name }}
     needs: generate-matrix
     runs-on: self-hosted
