--- a/.github/workflows/_scratchpad.yml
+++ b/.github/workflows/_scratchpad.yml
@@ -243,7 +243,7 @@ jobs:
           OUT2.3: ${{ fromJson(toJSON(steps.set-matrix.outputs.matrix))['matrix'] }}
           OUT2.4: ${{ fromJson(toJSON(steps.set-matrix.outputs.matrix)).matrix }}
           OUT2.5: ${{ fromJson(toJSON(steps.set-matrix.outputs.matrix)) }}
-          OUT2.6: ${{ fromJson(steps.set-matrix.outputs.matrix) }}
+          # OUT2.6: ${{ fromJson(steps.set-matrix.outputs.matrix) }}
           OUT2.7: ${{ steps.set-matrix.outputs.matrix }}
         run: |
           echo: $OUT
