--- a/.github/workflows/_scratchpad.yml
+++ b/.github/workflows/_scratchpad.yml
@@ -214,21 +214,21 @@ jobs:
             release-helper \
               --config .release-please-config.json \
               --manifest .release-please-manifest.json \
-              matrix all <<< ${RP_PR} >> $GITHUB_OUTPUT
+              matrix all <<< ${RP_REL} >> $GITHUB_OUTPUT
           echo "EOF" >> $GITHUB_OUTPUT
 
           echo "matrix_itch<<EOF" >> $GITHUB_OUTPUT
             release-helper \
               --config .release-please-config.json \
               --manifest .release-please-manifest.json \
-              matrix itch <<< ${RP_PR} >> $GITHUB_OUTPUT
+              matrix itch <<< ${RP_REL} >> $GITHUB_OUTPUT
           echo "EOF" >> $GITHUB_OUTPUT
 
           echo "matrix_pypi<<EOF" >> $GITHUB_OUTPUT
             release-helper \
               --config .release-please-config.json \
               --manifest .release-please-manifest.json \
-              matrix pypi <<< ${RP_PR} >> $GITHUB_OUTPUT
+              matrix pypi <<< ${RP_REL} >> $GITHUB_OUTPUT
           echo "EOF" >> $GITHUB_OUTPUT
           # echo matrix=$(jq '[.[]]' <<< ${APPS_ARRAY}) >> $GITHUB_OUTPUT
           # echo matrix_itch=$(jq '[.[] | select(.itch == true)]' <<< ${APPS_ARRAY}) >> $GITHUB_OUTPUT
@@ -236,18 +236,19 @@ jobs:
           echo matrix_void='[]' >> $GITHUB_OUTPUT
       - name: Print Output
         env:
-          OUT:    ${{ toJSON(steps.set-matrix.outputs) }}
-          OUT1:   ${{ toJSON(steps.set-matrix.outputs.matrix) }}
+          OUT:    ${{ toJSON(steps.set-matrix.outputs) }} # ok
+          OUT1:   ${{ toJSON(steps.set-matrix.outputs.matrix) }} # ok
           OUT2.1: ${{ toJSON(steps.set-matrix.outputs.matrix)['matrix'] }}
           OUT2.2: ${{ toJSON(steps.set-matrix.outputs.matrix['matrix']) }}
           OUT2.3: ${{ fromJson(toJSON(steps.set-matrix.outputs.matrix))['matrix'] }}
           OUT2.4: ${{ fromJson(toJSON(steps.set-matrix.outputs.matrix)).matrix }}
-          OUT2.5: ${{ fromJson(toJSON(steps.set-matrix.outputs.matrix)) }}
+          OUT2.5: ${{ fromJson(toJSON(steps.set-matrix.outputs.matrix)) }} # ok
           # OUT2.6: ${{ fromJson(steps.set-matrix.outputs.matrix) }}
-          OUT2.7: ${{ steps.set-matrix.outputs.matrix }}
+          OUT2.7: ${{ steps.set-matrix.outputs.matrix }} # ok == 2.5
           OUT2.8: ${{ steps.set-matrix.outputs.matrix.matrix }}
           OUT2.8.1: ${{ steps.set-matrix.outputs.matrix['matrix'] }}
           OUT2.9: ${{ fromJson(toJSON(steps.set-matrix.outputs.matrix)).matrix }}
+          OUT3: ${{ toJSON(steps.set-matrix.outputs.matrix)['matrix'] }}
         run: |
           echo: $OUT
 
