--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -89,7 +89,7 @@ jobs:
             release-helper \
               --config .release-please-config.json \
               --manifest .release-please-manifest.json \
-              info
+              info <<< '{}'
           echo '::endgroup::'
 
           echo '::group::🍓 Update the Versions'
