chore: add notifier to main

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -258,3 +258,31 @@ jobs:
     needs:
       - release-please
     secrets: inherit
+
+  notify:
+    if:  ${{ needs.release-please.outputs.matrix != '[]' }}
+    name: Notify ${{ matrix.name }} to the socials
+    needs:
+      - release-please
+    runs-on: self-hosted
+    strategy:
+      matrix:
+        include: ${{ fromJson(needs.release-please.outputs.matrix) }}
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          ref: ${{ github.sha }}
+      - name: Set up Python 3.11
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
+      - name: Install dependencies
+        shell: bash
+        run:
+          pip install -e 'tools/ci[social]'
+      - name: Notify ${{ matrix.name }} on Discord
+        env:
+          RN: ${{ matrix.release-notes }}
+          MESSAGE: ${{ matrix.release-notes }}
+        run: |
+          notify-discord ${{ matrix.name }} v${{ matrix.version }}
